<resources>
    <string name="app_name">Safe UCA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_maps_fragment">Map</string>
    <string name="dialogZone">Is this the danger zone?</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="settings">Settings</string>
    <string name="zoneDialog">Is the danger zone in</string>
    <string name="si">Yes</string>
    <string name="no">No</string>
    <string name="user_nav">User</string>
    <string name="logIn_successful">Log in successful</string>
    <string name="logOut_successful">Log out successful</string>
    <string name="logIn_error">Log in error</string>
    <string name="user_not_logged_in">User not logged in</string>
    <string name="all_data">Enter all data</string>
    <string name="logIn_to_report">Log in to report something</string>
    <string name="internet_required">Internet required to report</string>
    <string name="internet_required_map">Internet required to see map</string>
    <string name="info_name">NAME</string>
    <string name="info_danger">DANGER</string>
    <string name="info_type">TYPE</string>
    <string name="info_state">STATE</string>
    <string name="info_user">USER</string>
    <string name="info_description">DESCRIPTION</string>
    <string name="info_level">FLOOR</string>
    <string name="more_info"><![CDATA[More info -->]]></string>
    <string name="zones">Zones</string>
    <string name="zone_reports">Zone:</string>
    <string name="pending">Pending</string>
    <string name="done">Done</string>
    <string name="low">Low</string>
    <string name="moderate">Moderate</string>
    <string name="high">High</string>
    <string name="report">Report</string>
    <string name="maintenance">Maintenance</string>
    <string name="desinfection">Desinfection</string>
    <string name="reports_inside_uca">Reports must be inside UCA</string>
    <string name="enter_title">Enter title</string>
    <string name="write_description">Write description...</string>
    <string name="action_ok">Ok</string>
    <string name="action_cancel">Cancel</string>
    <string name="type">Type</string>
    <string name="severity">Severity</string>
    <string name="hint_status">Status:</string>
    <string name="hint_floor">Floor:</string>
    <string name="info_zone">ZONE</string>
    <string name="info_status">STATUS</string>
    <string name="map">Map</string>
    <string name="my_reports">My reports</string>
    <string name="all_reports">All reports</string>
    <string name="dark_mode">Dark mode</string>
    <string name="bright_mode">Bright mode</string>
    <string name="image_action">Upload image</string>
    <string name="choose_app">Select application</string>
    <string name="floor_number">Select floor number</string>
    <string name="no_camera_permission">without permission from the camera</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
</resources>
