<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/nav_items">
        <item
            android:id="@+id/nav_log_in"
            android:icon="@drawable/ic_subdirectory_arrow_right_black_24dp"
            android:title="@string/log_in"
            android:visible="false"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/sign_up"
                android:enabled="true"/>

    </group>

    <item android:title="Misc">
        <menu>
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_subdirectory_arrow_left_black_24dp"
                android:title="@string/log_out"
                android:enabled="false"
                android:visible="true"/>
            <item
                android:id="@+id/nav_dark_mode"
                android:icon="@drawable/ic_subdirectory_arrow_left_black_24dp"
                android:title="@string/log_out"
                android:enabled="false"
                android:visible="true"/>
        </menu>
    </item>

</menu>
