<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/generalPadding"
    android:background="@color/colorWhite">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normalText"
        android:text="@string/dialogZone"
        android:textColor="@color/colorBlack"
        android:gravity="center"
        android:layout_margin="@dimen/generalPadding"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/initial_si"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/si"
            android:layout_margin="@dimen/generalPadding"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorWhite"/>
        <Button
            android:id="@+id/initial_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:layout_margin="@dimen/generalPadding"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>
</LinearLayout>