<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.NewReportActivity">
    <include layout="@layout/app_bar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/generalPadding"
            android:background="@drawable/skin_info"
            android:padding="@dimen/generalPadding">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/generalPadding"
                android:paddingTop="@dimen/general_padding"
                android:paddingHorizontal="@dimen/big_padding">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/report_image"
                    android:src="@mipmap/placeholder"
                    android:layout_alignParentStart="true">
                </ImageView>
                <Button
                    android:id="@+id/report_image_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/image_action"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/generalPadding">
                <EditText
                    android:id="@+id/new_report_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"
                    android:hint="@string/enter_title"
                    android:singleLine="true"
                    android:textColorHint="@color/colorHint"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/generalPadding">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type"
                        android:textSize="@dimen/smallText"
                        android:textColor="@color/colorBlack"
                        android:layout_gravity="center"
                        android:padding="@dimen/generalPadding"/>
                    <Spinner
                        android:id="@+id/spinner_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:popupBackground="@drawable/skin_spinner"
                        style="@style/Widget.AppCompat.DropDownItem.Spinner"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/severity"
                        android:textSize="@dimen/smallText"
                        android:textColor="@color/colorBlack"
                        android:layout_gravity="center"
                        android:padding="@dimen/generalPadding"/>
                    <Spinner
                        android:id="@+id/spinner_danger"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:popupBackground="@drawable/skin_spinner"
                        style="@style/Widget.AppCompat.DropDownItem.Spinner"/>
                </LinearLayout>
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/new_report_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="10"
                    android:textColor="@color/colorPrimary"
                    android:hint="@string/write_description"
                    android:textColorHint="@color/colorHint"
                    android:gravity="top"
                    android:layout_marginBottom="@dimen/generalPadding"
                    android:inputType="textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="@dimen/generalPadding">
                <Button
                    android:id="@+id/new_report_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_ok"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@color/colorWhite"/>
                <Button
                    android:id="@+id/new_report_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_cancel"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@color/colorWhite"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>